fix: fail startup when game data will not load
An unreadable or unparseable data file left the registry half-populated
and startup continued, so every later publish rejected valid content
with an id-reference error that named a keyword instead of the missing
file.

Loading throws and startup fails; the registry takes its path through
the constructor so the failure is testable.